--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
+    <meta name="theme-color" content="#0b1020" />
     <!-- viewport-fit=cover enables env(safe-area-inset-*) on iOS (esp. standalone/PWA) -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <title>ear-train-station</title>
+    <title>Ear Train Station</title>
   </head>
   <body>
     <div id="root"></div>
